# cnwi

./: .gitignore  changelog.md  environmnet.yml  pyproject.toml  readme.md  setup.py  test.py
cnwi/: __main__.py  build_features.py  cli.py  features.py  filters.py  fourier_transform.py  helpers.py  image_processing.py  main.py  metrics.py  modeling.py  rmath.py  rsd.py  rsdproc.py  sensors.py  terrain_analysis.py
cnwi/cnwilib/: assessment.py  calculators.py  data.py  data_eng.py  datautils.py  features.py  image.py  image_collection.py  image_math.py  ingest.py  random_forest.py  test_image_collection.py
cnwi/data/: zones.csv  zones.py
cnwi/scripts/: sciops.py
docs/examples/: 00_ingest_orig_data.ipynb  01_build_features.ipynb  02_build_samples.ipynb  03_model_and_assess.ipynb  04_prediction_export.ipynb  06_rsd_processing_examples.ipynb  07_rf_modeling.ipynb  08_modelling_and_assessment.ipynb  build_features.ipynb  classify_cnwi_sciops.ipynb  create_data_manifest.ipynb  eco_areas.ipynb  fourier_transform.ipynb  modeling.ipynb  payload.py  prediction.ipynb  random_forest_classification.ipynb  sample_featues.ipynb
tests/: band_names.py  test_build_features.py  test_calculators.py  test_data.py  test_features.py  test_fourier_transform.py  test_image.py  test_image_collection.py  test_image_math.py  test_modeling.py  test_random_forest.py  test_rsd.py
